ppp.txt
Main.java:11: error: ';' expected
System.out.println("yogisss"+a[0])
                                  ^
1 error
